README: strict release architecture + dev workflow