@@ -1,119 +1,53 @@
 # Mindustry-HotReload
 
-> 保留线上玩法不变（原版 Mindustry + 现有 mod 照常运行），另起一套可**完全热重载**的开发/发布流水线：
-> 自动同步上游源码 → 改逻辑、加物品、加方块 → 进程不重启即时生效 → 自动发布 nightly Release。
+原版 Mindustry + **热重载开发系统**：改核心逻辑或 mod 内容，游戏进程不重启即时生效。
+所有 Release 均为**严格构建**：克隆上游指定 tag 源码 → 注入热重载补丁 → 编译发布。
 
-这是一个对 [Anuken/Mindustry](https://github.com/Anuken/Mindustry) 的完整 fork，额外加入：
+## Release 下载
 
-- **JVM 热替换 Agent**（`hotreload-agent/`）—— 运行中的游戏进程内直接热替换已加载的类，改核心逻辑（`mindustry.*`）无需重启。
-- **Overlay 内容热重载**（`overlay/`）—— 一个新的独立 mod，新增物品/方块/单位等**内容**以及 mod 内逻辑，改完自动在游戏中重载生效。
-- **GitHub Actions 自动同步**—— 每天自动拉取上游 master、合并、构建，并发布 nightly Release，玩家直接下载即用。
+| 资产 | 用途 |
+|---|---|
+| `Mindustry-HotReload.jar` | 客户端（桌面版） |
+| `server.jar` | 专用服务器 |
+| `hotreload-agent.jar` | JVM 热替换 agent（开发用） |
+| `overlay.zip` | 演示 mod：放进 mods/ 后边玩边改它的内容文件，观察实时重载 |
 
-## 开发工作流（热重载）
+- **稳定版** `vX.Y`：严格等于上游同名 tag + 热重载补丁（兼容范围 **v142+**）
+- **nightly**：上游 master HEAD + 补丁（预发布）
 
-环境要求：JDK 17+（本仓库用 Gradle wrapper，无本地 Android SDK 也能构建桌面端）。
-
-```bash
-# 1. 一次性部署 overlay 内容 mod 到 devdata/mods/overlay
-./gradlew :overlay:syncDev
-
-# 2. 启动游戏（自动挂上热替换 agent + 开启 overlay 监听）
-./gradlew :desktop:hotreloadRun
-```
-
-游戏起来之后，改代码的三种玩法：
+## 热重载能做什么
 
 | 你改什么 | 操作 | 生效方式 |
 |---|---|---|
-| 核心逻辑（`mindustry.logic.*`、`mindustry.world.*` 等） | `./gradlew :core:compileJava --continuous` | JVM agent 检测到新编译的 class，**当前进程内直接热替换**，无需重启 |
-| overlay 内容/逻辑（新物品、新方块、mod 内逻辑） | `./gradlew :overlay:syncDev` | overlay 监听器检测到变化，**重载整个 overlay mod**（新 classloader + 内容重建 + 贴图打包） |
-| 数值微调（不改代码） | 游戏内 JS 控制台执行 `overlay.OverlayMod.bonus = 5f` | 下个 tick 立即生效 |
+| 核心逻辑（`mindustry.*`） | 重编译 core | JVM agent 进程内热替换 class |
+| mod 内容/逻辑（新物品、方块、单位） | 保存到 watched 目录 | 监听器重载整个 mod（新 classloader + 内容重建 + 贴图打包） |
+| 数值微调 | 游戏内 JS 控制台 | 立即生效 |
 
-> 冷启动时如果 mod 目录（`devdata/mods/`）里有 overlay，游戏会自动加载它；把 `overlay/` 里的内容直接改掉再运行 `:overlay:syncDev` 即可。
-
-## 新增物品 / 方块示例
-
-`overlay/src/main/java/overlay/OverlayMod.java` 里内置了示例：
-
-- `silver` —— 新物品（纯 Java 声明）
-- `demo-generator` —— 带自定义逻辑的发电机（`DemoGeneratorBuild.updateTile()`），逻辑实时可调
-- `demo-wall` —— 普通新墙体
-- `content/items/demo-ore.json` —— 纯 HJSON 声明的新物品（无需写 Java）
-
-新增方块/物品后跑一次 `./gradlew :overlay:syncDev`，游戏内建造菜单会立即出现新方块（`PlacementFragment` 会自动重建）。
-
-## 核心逻辑热替换原理（agent）
-
-`hotreload-agent` 是一个零依赖的 Java Agent：
-
-```
--javaagent:hotreload-agent.jar
--Dhotreload.dir=core/build/classes/java/main   # 监听的 class 输出目录
--Dhotreload.poll=800                            # 轮询间隔 ms
--Dhotreload.debounce=300                        # 变更去抖 ms
-```
-
-- 监听 class 输出目录，`.class` 文件 mtime 变化后读取最新字节码。
-- 对已加载的类调用 `Instrumentation.redefineClasses()` 立即生效。
-- 对尚未加载的类通过 `ClassFileTransformer` 在加载时提供最新字节码。
-- 日志写入 `hotreload.log` 与控制台。
-
-也可以热附加到已运行的服务器（远程调试/线上热修）：
+## 本地开发
 
 ```bash
-# 找到目标 JVM pid
-jps -l
-# 用 agentmain 附加（JDK 自带 tools 支持 attach 到同机 JVM）
-./gradlew :hotreload-agent:jar
-java -jar hotreload-agent.jar <pid>   # 或者用 jcmd: jcmd <pid> JVMTI.agent_load ...
+# 启动（自动挂 agent + 监听 devdata/mods 下的 overlay,mymod 目录）
+./gradlew :desktop:hotreloadRun -Doverlay.dirs=overlay,mymod
+# 服务端同理
+./gradlew :server:hotreloadRun -Doverlay.dirs=overlay
 ```
 
-## 自动同步上游 + 发布（CI/CD）
+- watched 目录是**目录 mod**（`mod.hjson` + `content/` + `sprites/` + 可选 `src/`），
+  改动后约 1 秒内自动重载；也可在游戏内 JS 控制台手动 `OverlayMods.reload()`
+- 演示 mod 可用 `scripts/make-overlay.sh <目录>` 生成
+- 详细文档见 [docs/MODS.md](docs/MODS.md)（mod 接入）、[docs/MODIFICATIONS.md](docs/MODIFICATIONS.md)（改动清单）
 
-`.github/workflows/sync-upstream.yml` 每天 02:00 UTC（或手动点击 **Run workflow**）自动执行：
+## 构建架构（对上游的侵入最小化）
 
-1. **同步**：拉取 `Anuken/Mindustry` master → 合并到本仓库 `master`（保留本项目的改动；冲突会失败并创建 issue 提醒人工处理）。
-2. **构建**：JDK 17 构建桌面端、服务端、agent、overlay。
-3. **发布**：创建/更新 `nightly` Release，内含：
-   - `Mindustry-HotReload.jar`（完整游戏，含 overlay 重载能力）
-   - `Mindustry-HotReload-server.jar`（无头服务器）
-   - `hotreload-agent.jar`（可附加到任意 JVM 热替换逻辑）
-   - `mods/overlay/`（放入游戏的 `mods` 目录即可开箱体验内容热编辑）
+master 分支的注入面收敛为：
 
-如需在 fork 上跑工作流：`Settings → Actions → General → Workflow permissions` 选择 **Read and write permissions**（本仓库已配置）。
+- `inject/` —— 零冲突新文件：`OverlayMods.java`（全部重载逻辑）、`hotreload-agent/`
+- `scripts/make-patches.py` —— 对上游文件的**语义锚点编辑**（锚点失配即报错）：
+  Mods.java 仅 4 处微改（3 个可见性 + 1 行 init 钩子）、Content.java id 防冲突、
+  settings/desktop/server 构建脚本、ServerLauncher 数据目录
+- `scripts/inject-hotreload.sh <树>` —— 拷贝 inject/ + 执行语义编辑，用于任意干净上游树
+- `.github/workflows/strict-release.yml` —— 克隆上游 tag → 注入 → 编译 → 发布；
+  支持 `backfill`（批量补齐缺失版本）与 `nightly`
 
-## 项目结构
-
-```
-├── core/                 # 游戏本体源码（上游）+ HOTRELOAD 标记的最小改动
-│   └── src/mindustry/mod/
-│       ├── Mods.java     # 3 处 HOTRELOAD 标记改动：loadMod 公开、reloadMod()、watcher 钩子
-│       └── OverlayMods.java  # overlay 监听器（文件变化 → 重载 mod → 重建 UI）
-├── hotreload-agent/      # JVM 热替换 Agent（独立模块，零依赖）
-├── overlay/              # 可热重载的示例内容 mod（Java + HJSON + 贴图）
-├── devdata/              # 开发数据目录（保存、mods，gitignore）
-├── scripts/              # dev-run / dev-compile 辅助脚本
-└── .github/workflows/    # 自动同步 + 构建 + 发布
-```
-
-## 与上游同步冲突
-
-本项目对上游的改动都带 `HOTRELOAD` 标记且极小（`Mods.java` 约 40 行 + 一个新文件 + 两个新模块），日常自动合并极少冲突。若冲突：
-
-```bash
-git remote add upstream https://github.com/Anuken/Mindustry.git
-git fetch upstream
-git merge upstream/master
-# 手工解决冲突（找 `HOTRELOAD` 标记区域），然后推送即可
-```
-
-## 构建
-
-```bash
-./gradlew :desktop:dist :server:dist :hotreload-agent:jar  # 产出桌面端/服务端/agent
-./gradlew :overlay:syncDev                                 # 部署 overlay 到 devdata
-```
-
-## 许可
-
-Mindustry 采用 GPL-3.0，本仓库同样遵循。详见 [LICENSE](LICENSE)。
+> 补丁锚点经逐版本探测：v142+ 可注入；更老版本不发布。
+> 本机 WSL 内存受限时调低 `gradle.properties` 的 `-Xmx`（勿用命令行覆盖，会丢 `--add-opens`）。
